# WeightedScoreTracker

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  scores_data.json
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-windows.yml
score_app/: calculator.py  components.py  config.py  data_model.py  main_window.py  plot_widget.py
src/: action.rs  app.rs  constants.rs  logic.rs  main.rs  models.rs  persistence.rs
src/application/: error.rs  mod.rs  ports.rs  service.rs
src/domain/: app_data.rs  category.rs  error.rs  item.rs  mod.rs  model.rs  selection.rs
src/infrastructure/: json_store.rs  mod.rs
src/models/app/: app_data.rs  category.rs  item.rs  mod.rs
src/ui/: central_panel.rs  fonts.rs  mod.rs  modals.rs  side_panel.rs  state.rs
src/ui/central_panel/: chart.rs  history.rs  input.rs  mod.rs  score_input.rs
src/ui/components/: category_list.rs  history_list.rs  mod.rs  score_chart.rs  score_input.rs
src/ui/modals/: add_category.rs  add_item.rs  category.rs  confirm.rs  edit_category.rs  edit_decay.rs  edit_item.rs  error.rs  item.rs  mod.rs  types.rs
src/ui/side_panel/: category_list.rs  mod.rs
src/utils/: comma_display.rs  ime.rs  mod.rs  weighted_statistics.rs
