[package]
name = "ScoreTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"                                    # GUI本体
egui_plot = "0.34"                                 # グラフ描画
serde = { version = "1.0", features = ["derive"] } # シリアライズ
serde_json = "1.0"                                 # JSON操作
chrono = { version = "0.4", features = ["serde"] } # 日時操作
rfd = "0.16"                                       # (オプション) ファイルダイアログ等が必要なら使うが今回は不要
